# andri

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  justfile
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: benchmarking.md  cli.md  file.md  protocol.md  tcp.md  testing.md  udp.md  usage.md  web.md
src/: cli.rs  main.rs  meter.rs  proto.rs  session.rs
src/modes/: file.rs  mod.rs  tcp.rs  udp.rs
