[package]
name = "andri"
version = "0.1.0"
edition = "2024"
description = "Fast, all-in-one LAN speed tester — TCP throughput, UDP loss/jitter, and real file-transfer speed."
authors = ["mavyfaby <maverickfabroa@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/mavyfaby/andri"
readme = "README.md"
keywords = ["iperf", "lan", "speed-test", "tcp", "udp"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread", # multi-threaded scheduler (parallel streams)
    "macros",          # #[tokio::main], tokio::select!
    "net",             # TcpListener/TcpStream, UdpSocket
    "fs",              # async file read for file-transfer mode
    "io-util",         # AsyncReadExt/AsyncWriteExt for the hot loops
    "time",            # interval/timeout for UDP pacing + handshake timeouts
    "sync",            # mpsc/oneshot for task coordination + shutdown
    "signal",          # graceful Ctrl-C shutdown of the server
] }

# Tuned for a fast, lean release binary. Relevant for a benchmark tool: the
# tool's own overhead should not skew measurements. Trade-off: slower compiles.
[profile.release]
opt-level = 3     # maximum optimization
lto = "fat"       # whole-program link-time optimization
codegen-units = 1 # one unit = better optimization, slower build
panic = "abort"   # smaller binary, no unwinding overhead (no catch_unwind)
strip = true      # strip symbols/debuginfo from the binary
debug = false
